feat: add reset-password and forgot password api.
